Fix rulers showing pixels no matter the unit

Before this commit, when you selected the unit for a ruler,
it stayed as pixels. This patch changes the behaviour
so the ruler has correct unit now.

BUG:406181